Utworzono za pomocą Colaboratory

--- a/AI_Lublin_2023.ipynb
+++ b/AI_Lublin_2023.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOd/ePvJZ2vWv1sykiADaK3",
+      "authorship_tag": "ABX9TyNGMkIhwR8MceZCNsbL1Jlk",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -38,21 +38,19 @@
         "\n",
         "\n",
         "\n",
-        "#**<font color = \"red\">Introduction to machine learning</font>**\n",
+        "#**<font color = \"red\">AI, is it a magic?</font>**\n",
+        "#**<font color = \"red\">Building blocks of Artificial Intelligence</font>**\n",
         "\n",
-        "**Lecture 7**\n",
+        "**Hands-on workshop, Lublin**\n",
         "\n",
+        "<image src='https://raw.githubusercontent.com/marcinwolter/AI_Lublin_2023/main/images/The_Chess_Turk.jpg' width=600px>\n",
         "\n",
-        "##**<font color = \"green\">Transfer learning</font>**\n",
-        "##**<font color = \"green\">Reinforcement learning</font>**\n",
-        "##**<font color = \"green\">Autoencoder</font>**\n",
-        "\n",
-        "*19 April 2023*\n",
+        "*19 June 2023*\n",
         "\n",
         "\n",
         "---\n",
         "\n",
-        "*Marcin Wolter, IFJ PAN*\n",
+        "*Marcin Wolter, Institute of Nuclear Physics PAN, Kraków*\n",
         "\n",
         "*e-mail: marcin.wolter@ifj.edu.pl*\n",
         "\n",
@@ -69,16 +67,14 @@
       "source": [
         "#<font color='green'>**Program for today:**\n",
         "\n",
-        "* ###  <font color='red'>Transfer learning: using pretrained networks.\n",
-        "* ###  <font color='red'>Reinforcement learning: how to train a robot?\n",
-        "* ###  <font color='red'>Autoencoder: like PCA, but not linear \n",
+        "* ###  <font color='red'>\n",
         "\n",
         "<br>\n",
         "\n",
         "\n",
-        "**As always all slides are here:** \n",
+        "**All slides are here:** \n",
         "\n",
-        "*https://github.com/marcinwolter/Machine-learning-KISD-2023*\n",
+        "*https://github.com/marcinwolter/AI_Lublin_2023*\n",
         "\n",
         "<br>\n",
         "\n",
@@ -88,16 +84,40 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# **Ideas about your projects???**"
+        "<center>\n",
+        "\n",
+        "#**<font color='green'>Artificial Intelligence**\n",
+        "\n",
+        "<image src='https://raw.githubusercontent.com/marcinwolter/AI_Lublin_2023/main/images/Artificial_intelligence_prompt_completion_by_dalle_mini.jpg' width=300px>\n",
+        "</center>\n",
+        "\n",
+        "**Artificial intelligence (AI)** is intelligence—perceiving, synthesizing, and inferring information—demonstrated by machines, as opposed to intelligence displayed by non-human animals or by humans. Example tasks in which this is done include speech recognition, computer vision, translation between (natural) languages, as well as other mappings of inputs.\n",
+        "\n",
+        "AI applications include advanced web search engines (e.g., Google Search), recommendation systems (used by YouTube, Amazon, and Netflix), understanding human speech (such as Siri and Alexa), self-driving cars (e.g., Waymo), generative or creative tools (ChatGPT and AI art), automated decision-making, and competing at the highest level in strategic game systems (such as chess and Go).\n",
+        "\n",
+        "*(Wikipedia)*"
       ],
       "metadata": {
-        "id": "BEMQpIA5nKej"
+        "id": "Re3clUUQnPRU"
       }
     },
     {
       "cell_type": "markdown",
       "source": [
-        "# <font color='green'> **Transfer learning**\n",
+        "Plan\n",
+        "* Neural Network - key element of AI\n",
+        "* Convolutional NN - key factor of image recognition\n",
+        "* Simple image recognition dogs vs cats\n",
+        "* transfer learning?"
+      ],
+      "metadata": {
+        "id": "kgilyR93oxgp"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# **<font color='green'>Transfer learning</font>**\n",
         "\n",
         "The reuse of a previously learned model on a new problem is known as transfer learning. It’s particularly popular in deep learning right now since it can train deep neural networks with a small amount of data.\n",
         "\n",
