--- a/AI_Lublin_2023.ipynb
+++ b/AI_Lublin_2023.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNGMkIhwR8MceZCNsbL1Jlk",
+      "authorship_tag": "ABX9TyPawAOMWHXnmy2o1woNHeOa",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -93,9 +93,11 @@
         "\n",
         "**Artificial intelligence (AI)** is intelligence—perceiving, synthesizing, and inferring information—demonstrated by machines, as opposed to intelligence displayed by non-human animals or by humans. Example tasks in which this is done include speech recognition, computer vision, translation between (natural) languages, as well as other mappings of inputs.\n",
         "\n",
-        "AI applications include advanced web search engines (e.g., Google Search), recommendation systems (used by YouTube, Amazon, and Netflix), understanding human speech (such as Siri and Alexa), self-driving cars (e.g., Waymo), generative or creative tools (ChatGPT and AI art), automated decision-making, and competing at the highest level in strategic game systems (such as chess and Go).\n",
+        "AI applications include **advanced web search engines (e.g., Google Search), recommendation systems (used by YouTube, Amazon, and Netflix), understanding human speech (such as Siri and Alexa), self-driving cars (e.g., Waymo), generative or creative tools (ChatGPT and AI art), automated decision-making, and competing at the highest level in strategic game systems (such as chess and Go).**\n",
         "\n",
-        "*(Wikipedia)*"
+        "*(Wikipedia)*\n",
+        "\n",
+        "###**<font color='green'>We try to show simple examples (with code) performing some of these tasks.**"
       ],
       "metadata": {
         "id": "Re3clUUQnPRU"
@@ -104,14 +106,342 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Plan\n",
+        "Plan   (do wymazania)\n",
+        "* What is AI?\n",
+        "* Well known AI applications (list them: )\n",
         "* Neural Network - key element of AI\n",
         "* Convolutional NN - key factor of image recognition\n",
-        "* Simple image recognition dogs vs cats\n",
-        "* transfer learning?"
+        "* Simple image recognition dogs vs cats or letters etc\n",
+        "* transfer learning?\n",
+        "* GANs - how does it work\n",
+        "* example GAN - generate letters? \n",
+        "* pokazać twarze (ale nie uruchamiać) \n",
+        "* pokazać kolorowanie\n",
+        "* omówić transfer obrazu - style\n",
+        "* pokazac StarryAI\n",
+        "\n",
+        "* werbalnie - omówić ChatGPT\n",
+        "* ważny mechanizm - attention network\n",
+        "* pokazać mini ChatGPT - Keras Text generation with a miniature GPT\n",
+        "  https://dldata-public.s3.us-east-2.amazonaws.com/simplebooks.zip\n",
+        "\n",
+        "* simple language translator polsko-angielski z http://www.manythings.org/anki/\n",
+        "\n",
+        "* reinforcement learning"
       ],
       "metadata": {
         "id": "kgilyR93oxgp"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "#**<font color='green'>Neural network - a building block of AI**"
+      ],
+      "metadata": {
+        "id": "RRqK8PsFbIL8"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "\n",
+        "#<font color='green'> **Neural networks are inspired by human brain**\n",
+        "\n",
+        "<img src='https://raw.githubusercontent.com/marcinwolter/Machine-learning-KISD-2022/main/images/lecture5/inspired-by-human-brain-0.png' width=350px>\n",
+        "\n",
+        "- **Human brain:**\n",
+        "  - $10^{14}$ neurons, frequency 100 Hz\n",
+        "  - Parallel processing of data (complex pattern recognition in 100 ms - 10 steps only!!!)\n",
+        "  - Learns on examples\n",
+        "  - Resistant for errors and damaged neurons\n",
+        "- **Neural Network:**\n",
+        "  - Just an algorithm, which might not reflect the way the brain is working.\n",
+        "\n",
+        "\n",
+        "\n",
+        "#<font color='green'> **History**\n",
+        "\n",
+        "- 1938 - N. Rashevsky, neurodynamics – neural networks as dynamic systems, recurrent networks;\n",
+        "- 1943 - W. McCulloch, W. Pitts, neural networks=logic systems;\n",
+        "- 1958 - F. Rosenblatt, perceptron, network as a function;\n",
+        "- 1973 - Chr. von der Malsburg, self-orgnization in the brain;\n",
+        "- 1982 - Kohonen, Self-Organizing Maps\n",
+        "- ... \n",
+        "- 1986 - backpropagation of errors, many application!\n",
+        "- …\n",
+        "- 2010 - Deep Neural Networks – great progress in AI!!!!!!\n",
+        "\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "UIY3QRG2n62C"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "usunąć\n",
+        "\n",
+        "#<font color='green'> **Artificial Neural Network**\n",
+        "\n",
+        "  - Neural Network – a mathematical model which is composed out of many functions (typically nonlinear)\n",
+        "  - Tasks:\n",
+        "    - Event classification\n",
+        "     - background vs signal classification\n",
+        "    - Regression\n",
+        "     * approximation of a real function\n",
+        "  - Two types of networks:\n",
+        "    - Feed forward \n",
+        "     -  information is sent from input layer to output without any loops\n",
+        "    - Recurrent\n",
+        "     - recurrent loops.\n",
+        "  - Learning: \n",
+        "    - supervised\n",
+        "    - unsupervised\n",
+        "\n",
+        "\n",
+        "<img src='https://raw.githubusercontent.com/marcinwolter/Machine-learning-KISD-2022/main/images/lecture5/slide-6-image-0.gif' width=450px>\n",
+        "\n",
+        "*Feed-forward (left) and recurrent (right) neural networks.*"
+      ],
+      "metadata": {
+        "id": "XM2NTYnO8bHV"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "#<font color='green'> **What are they used for?**\n",
+        "\n",
+        "\n",
+        "<img src='https://raw.githubusercontent.com/marcinwolter/Machine-learning-KISD-2022/main/images/lecture5/what-are-they-used-for-1.png' width=250px>\n",
+        "\n",
+        "- Expert systems\n",
+        "- Pattern recognition\n",
+        "- Predictions (meteorology, stock market...)\n",
+        "\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "EO8Ya1wq_Efu"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "#<font color='green'>**Neuron – the basic element of neural network**\n",
+        "\n",
+        "<img src='https://raw.githubusercontent.com/marcinwolter/Machine-learning-KISD-2022/main/images/lecture5/neuron-the-basic-element-2.jpg'>\n",
+        "\n",
+        "<img src='https://raw.githubusercontent.com/marcinwolter/Machine-learning-KISD-2022/main/images/lecture5/neuron-the-basic-element-0.gif' width=350 px>\n",
+        "\n",
+        "  - Function of a weighted average of inputs $y_i = f(\\sum w_{ij} y_j)$  \n",
+        "  - Function \n",
+        "  $f$ is called an activation function\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "## **Typical activation functions:**\n",
+        "\n",
+        "<img src='https://raw.githubusercontent.com/marcinwolter/Machine-learning-KISD-2022/main/images/lecture5/typical-activation-functions-1.png' width=450px>\n",
+        "\n",
+        "* Linear (the whole network is called “linear”)\n",
+        "$$y=x$$\n",
+        "\n",
+        "<img src='https://raw.githubusercontent.com/marcinwolter/Machine-learning-KISD-2022/main/images/lecture5/typical-activation-functions-3.png' width=450px>\n",
+        "\n",
+        "* Logistic\n",
+        "$$ y= \\frac{1}{1+e^{-x}} $$\n",
+        "\n",
+        "<img src='https://raw.githubusercontent.com/marcinwolter/Machine-learning-KISD-2022/main/images/lecture5/typical-activation-functions-5.png' width=450px>\n",
+        "\n",
+        "* Hyperbolical tangent\n",
+        "$$ y=\\frac{e^x-e^{-x} }{e^x+e^{-x} } $$\n",
+        "<img src='https://upload.wikimedia.org/wikipedia/commons/thumb/d/d9/Dirac_distribution_CDF.svg/2560px-Dirac_distribution_CDF.svg.png' width=450px>\n",
+        "\n",
+        "* Step\n",
+        "<img src='https://raw.githubusercontent.com/marcinwolter/Machine-learning-KISD-2022/main/images/lecture5/typical-activation-functionslinear-the-whole-network-is-called-linearlogistichyperbolical-tangentstep-10.png' width=450px>\n",
+        "\n",
+        "* **<font color='red'>Rectified Linear (Relu), very popular in Deep Neural Networks**\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "FzG8iTb7BQst"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "#<font color='green'>**Training a single neuron**\n",
+        "\n",
+        " - Neuron is trained on examples\n",
+        " - Supervised learning – the proper answers are known for the training set\n",
+        "\n",
+        "<img src='https://raw.githubusercontent.com/marcinwolter/Machine-learning-KISD-2022/main/images/lecture5/training-a-single-neuron-0.png' width=450px>\n",
+        "\n",
+        "*ADALINE (Adaptive Linear Network)*\n",
+        "\n",
+        "<br>\n",
+        "\n",
+        "\n",
+        "   - $X_i$ – input data\n",
+        "   - $y$ - output value\n",
+        "   - $Z$ -the true output value (supervised training!)\n",
+        "\n",
+        "###**TASK – minimize the loss function:**\n",
+        " $ \\chi^2 = \\sum (y^{(i)}-Z^{(i)})^2$\n",
+        "   - Calculate the difference between the true end reconstructed outbut:<br>\n",
+        "   $ \\delta = Z - y$\n",
+        "   - Find a new set of weights:<br>\n",
+        "   $ W^{'} = W - \\eta \\cdot \\delta \\cdot X $<br>\n",
+        "   where $\\eta$ is a learning speed\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "ecV0KsBPG7G-"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "#<font color='green'>**Speed of learning**\n",
+        "\n",
+        "\n",
+        "<img src='https://raw.githubusercontent.com/marcinwolter/Machine-learning-KISD-2022/main/images/lecture5/speed-of-learning-0.gif'>\n",
+        "\n",
+        "**To small**\n",
+        "\n",
+        "<img src='https://raw.githubusercontent.com/marcinwolter/Machine-learning-KISD-2022/main/images/lecture5/speed-of-learning-1.gif'>\n",
+        "\n",
+        "**To big**\n"
+      ],
+      "metadata": {
+        "id": "1MXfTQ-xQadQ"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## **What can a single neuron (perceptron) do?**\n",
+        "\n",
+        "Perceptron (with a step activation function) can divide a plane by a straight line (in general: division by a hyperplane in the n-dimensional space).\n",
+        "\n",
+        "\n",
+        "<img src='https://raw.githubusercontent.com/marcinwolter/Machine-learning-KISD-2022/main/images/lecture5/slide-12-image-0.png'>\n",
+        "\n",
+        "Points above the line are classified as “1” (signal) and below as “0” - background.\n",
+        "\n",
+        "<img src='https://raw.githubusercontent.com/marcinwolter/Machine-learning-KISD-2022/main/images/lecture5/Screenshot from 2022-03-20 22-42-20.png' width=250 px>\n",
+        "\n",
+        "\n",
+        "## **What the perceptron can not do?**\n",
+        "A single perceptron can’t separate the linearly not separable classes, for example the XOR function.The discovery of these limitations (1969) stopped the development of Neural Networks for some time.\n",
+        "\n",
+        "<img src='https://raw.githubusercontent.com/marcinwolter/Machine-learning-KISD-2022/main/images/lecture5/\n",
+        "Screenshot from 2022-03-20 22-43-24.png' width=250 px>\n",
+        "<img src='https://raw.githubusercontent.com/marcinwolter/Machine-learning-KISD-2022/main/images/lecture5/Screenshot from 2022-03-20 22-44-15.png' width=250 px>\n",
+        "<img src='https://raw.githubusercontent.com/marcinwolter/Machine-learning-KISD-2022/main/images/lecture5/Screenshot from 2022-03-20 22-43-00.png' width=250 px>\n",
+        "\n",
+        "\n",
+        "\n",
+        "## **So, maybe a network of perceptrons?**\n",
+        "\n",
+        "   - Feed forward network – the information propagates from input to output.\n",
+        "   - The net is the sum of many activation functions (in general it is non-linear)\n",
+        "   - A network, which is enough complicated can reproduce any function. \n",
+        "\n",
+        "<img src='https://raw.githubusercontent.com/marcinwolter/Machine-learning-KISD-2022/main/images/lecture5/\n",
+        "Screenshot from 2022-03-20 22-54-29.png' width=350 px>\n"
+      ],
+      "metadata": {
+        "id": "vllUio1kRNlY"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "#**What a network can do? <br> (step activation function)**\n",
+        "\n",
+        "<img src='https://raw.githubusercontent.com/marcinwolter/Machine-learning-KISD-2022/main/images/lecture5/Screenshot from 2022-03-20 22-57-56.png' width=550 px>\n"
+      ],
+      "metadata": {
+        "id": "uZ7K9cZjWAM3"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "#<font color='green'>**How to train a multilayer network?**\n",
+        "\n",
+        "* Minimize the loss function by choosing a set of weights $\\omega$:\n",
+        "$$ R(\\omega) =\\frac{1}{N}\\sum_i(Z_i - net(X_i,\\omega_i))^2 $$\n",
+        "where $Z_i$ is true target value, $X_i$ is an input.\n",
+        "\n",
+        "* Problem – how to correct the weights in the deeper layer, while\n",
+        "comparing only outputs on the last layer?\n",
+        "* This problem stopped the development of Neural Networks for 30\n",
+        "years, until 80-ties.\n",
+        "* **Solution - the backpropagation** method. Errors $\\delta = Z_i - net(X_i,\\omega_i)$ are\n",
+        "propagated backward through the net using the actual weights.\n",
+        "\n",
+        "\n",
+        "#**Typical training procedure**\n",
+        "\n",
+        "- Two data samples: for training and for tests.\n",
+        "- $\\chi^2 = \\sum_i (Z_i - net(X_i,\\omega_i))^2 $\n",
+        " is calculated for both training and test samples and compared to avoid \n",
+        " overtraining. \n",
+        "- Backpropagation:\n",
+        "  \n",
+        "  difference between the expected and calculated value of output\n",
+        "$\\delta = Z_i - net(X_i,\\omega_i)$\n",
+        "  is propagated backward through the net using the actual weights: \n",
+        "  $ W^{'} = W - \\eta \\cdot \\delta \\cdot X $<br>\n",
+        "\n",
+        "<img src='https://raw.githubusercontent.com/marcinwolter/Machine-learning-KISD-2022/main/images/lecture5/typical-training-procedure-1.png' width=450px>\n"
+      ],
+      "metadata": {
+        "id": "Hl3ESgDUhMAh"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "#<font color='green'>**Finding the minimum**\n",
+        "\n",
+        "   - We never know, whether the global or a local minimum of the loss function is reached.\n",
+        "   - Mechanisms preventing  stopping in a local minimum:\n",
+        "     - Using random initial weights, repetition of training,\n",
+        "     - Addition of noise, so the minimizing algorithm can jump out of a local minimum (jittering).\n",
+        "   - Regularization - both MLPRegressor and MLPClassifier use parameter alpha for regularization (L2 regularization) term which helps in avoiding overfitting by penalizing weights with large magnitudes.\n",
+        "\n",
+        "\n",
+        "## **Minimization algorithms in sklearn**\n",
+        "\n",
+        "- Stochastic Gradient Descent (SGD) - updates parameters using the gradient of the loss function with respect to a parameter that needs adaptation:\n",
+        "\n",
+        "<img src='https://raw.githubusercontent.com/marcinwolter/Machine-learning-KISD-2022/main/images/lecture5/Non-convex-optimization-We-utilize-stochastic-gradient-descent-to-find-a-local-optimum.png' width=350px>\n",
+        "\n",
+        "- Adam - similar to SGD, but it can automatically adjust the amount to update parameters based on adaptive estimates of lower-order moments.\n",
+        "- L-BFGS - approximates the Hessian matrix which represents the second-order partial derivative of a function. Further it approximates the inverse of the Hessian matrix to perform parameter updates.\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "3tcJP0bnl1-h"
       }
     },
     {
