Utworzono za pomocą Colaboratory

--- a/AI_Lublin_2023.ipynb
+++ b/AI_Lublin_2023.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPawAOMWHXnmy2o1woNHeOa",
+      "authorship_tag": "ABX9TyMjL6YsCekEzzPzE3q3o4pv",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -43,9 +43,11 @@
         "\n",
         "**Hands-on workshop, Lublin**\n",
         "\n",
+        "*19 June 2023*\n",
+        "\n",
         "<image src='https://raw.githubusercontent.com/marcinwolter/AI_Lublin_2023/main/images/The_Chess_Turk.jpg' width=600px>\n",
         "\n",
-        "*19 June 2023*\n",
+        "**Mechanical Turk** was a fraudulent chess-playing machine constructed in the late 18th century.\n",
         "\n",
         "\n",
         "---\n",
@@ -106,6 +108,23 @@
     {
       "cell_type": "markdown",
       "source": [
+        "\n",
+        "<center>\n",
+        "\n",
+        "#**<font color='green'>Artificial Intelligence vs. Machine Learning vs. Deep Learning**\n",
+        "\n",
+        "<image src='https://raw.githubusercontent.com/marcinwolter/AI_Lublin_2023/main/images/Machine-Learning-blog-image.png' width=400px>\n",
+        "<image src='https://raw.githubusercontent.com/marcinwolter/AI_Lublin_2023/main/images/rodrigo2.png' width=600px>\n",
+        "\n",
+        "</center>"
+      ],
+      "metadata": {
+        "id": "tCWxRle_QVrq"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
         "Plan   (do wymazania)\n",
         "* What is AI?\n",
         "* Well known AI applications (list them: )\n",
@@ -146,9 +165,12 @@
       "cell_type": "markdown",
       "source": [
         "\n",
-        "#<font color='green'> **Neural networks are inspired by human brain**\n",
         "\n",
-        "<img src='https://raw.githubusercontent.com/marcinwolter/Machine-learning-KISD-2022/main/images/lecture5/inspired-by-human-brain-0.png' width=350px>\n",
+        "###<font color='green'> **Neural networks are inspired by human brain**\n",
+        "\n",
+        "<center>\n",
+        "<img src='https://raw.githubusercontent.com/marcinwolter/Machine-learning-KISD-2022/main/images/lecture5/inspired-by-human-brain-0.png' width=450px>\n",
+        "</center>\n",
         "\n",
         "- **Human brain:**\n",
         "  - $10^{14}$ neurons, frequency 100 Hz\n",
@@ -181,47 +203,12 @@
     {
       "cell_type": "markdown",
       "source": [
-        "usunąć\n",
-        "\n",
-        "#<font color='green'> **Artificial Neural Network**\n",
-        "\n",
-        "  - Neural Network – a mathematical model which is composed out of many functions (typically nonlinear)\n",
-        "  - Tasks:\n",
-        "    - Event classification\n",
-        "     - background vs signal classification\n",
-        "    - Regression\n",
-        "     * approximation of a real function\n",
-        "  - Two types of networks:\n",
-        "    - Feed forward \n",
-        "     -  information is sent from input layer to output without any loops\n",
-        "    - Recurrent\n",
-        "     - recurrent loops.\n",
-        "  - Learning: \n",
-        "    - supervised\n",
-        "    - unsupervised\n",
-        "\n",
-        "\n",
-        "<img src='https://raw.githubusercontent.com/marcinwolter/Machine-learning-KISD-2022/main/images/lecture5/slide-6-image-0.gif' width=450px>\n",
-        "\n",
-        "*Feed-forward (left) and recurrent (right) neural networks.*"
-      ],
-      "metadata": {
-        "id": "XM2NTYnO8bHV"
-      }
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
         "#<font color='green'> **What are they used for?**\n",
         "\n",
         "\n",
         "<img src='https://raw.githubusercontent.com/marcinwolter/Machine-learning-KISD-2022/main/images/lecture5/what-are-they-used-for-1.png' width=250px>\n",
         "\n",
-        "- Expert systems\n",
-        "- Pattern recognition\n",
-        "- Predictions (meteorology, stock market...)\n",
-        "\n",
-        "\n"
+        "**In (nearly) all fields of Artificial Intelligence.**\n"
       ],
       "metadata": {
         "id": "EO8Ya1wq_Efu"
@@ -247,24 +234,19 @@
         "\n",
         "## **Typical activation functions:**\n",
         "\n",
-        "<img src='https://raw.githubusercontent.com/marcinwolter/Machine-learning-KISD-2022/main/images/lecture5/typical-activation-functions-1.png' width=450px>\n",
+        "<img src='https://raw.githubusercontent.com/marcinwolter/Machine-learning-KISD-2022/main/images/lecture5/typical-activation-functions-1.png' width=350px>\n",
+        "<img src='https://raw.githubusercontent.com/marcinwolter/Machine-learning-KISD-2022/main/images/lecture5/typical-activation-functions-3.png' width=350px>\n",
         "\n",
-        "* Linear (the whole network is called “linear”)\n",
-        "$$y=x$$\n",
+        "* Linear (the whole network is called “linear”) $y=x$  &emsp;  Logistic\n",
+        "$ y= \\frac{1}{1+e^{-x}} $\n",
         "\n",
-        "<img src='https://raw.githubusercontent.com/marcinwolter/Machine-learning-KISD-2022/main/images/lecture5/typical-activation-functions-3.png' width=450px>\n",
-        "\n",
-        "* Logistic\n",
-        "$$ y= \\frac{1}{1+e^{-x}} $$\n",
-        "\n",
-        "<img src='https://raw.githubusercontent.com/marcinwolter/Machine-learning-KISD-2022/main/images/lecture5/typical-activation-functions-5.png' width=450px>\n",
+        "<img src='https://raw.githubusercontent.com/marcinwolter/Machine-learning-KISD-2022/main/images/lecture5/typical-activation-functions-5.png' width=350px>\n",
+        "<img src='https://upload.wikimedia.org/wikipedia/commons/thumb/d/d9/Dirac_distribution_CDF.svg/2560px-Dirac_distribution_CDF.svg.png' width=350px>\n",
         "\n",
         "* Hyperbolical tangent\n",
-        "$$ y=\\frac{e^x-e^{-x} }{e^x+e^{-x} } $$\n",
-        "<img src='https://upload.wikimedia.org/wikipedia/commons/thumb/d/d9/Dirac_distribution_CDF.svg/2560px-Dirac_distribution_CDF.svg.png' width=450px>\n",
+        "$ y=\\frac{e^x-e^{-x} }{e^x+e^{-x} } $  &emsp; &emsp; &emsp;  &emsp; &emsp; &emsp; Step\n",
         "\n",
-        "* Step\n",
-        "<img src='https://raw.githubusercontent.com/marcinwolter/Machine-learning-KISD-2022/main/images/lecture5/typical-activation-functionslinear-the-whole-network-is-called-linearlogistichyperbolical-tangentstep-10.png' width=450px>\n",
+        "<img src='https://raw.githubusercontent.com/marcinwolter/Machine-learning-KISD-2022/main/images/lecture5/typical-activation-functionslinear-the-whole-network-is-called-linearlogistichyperbolical-tangentstep-10.png' width=350px>\n",
         "\n",
         "* **<font color='red'>Rectified Linear (Relu), very popular in Deep Neural Networks**\n",
         "\n",
@@ -284,10 +266,7 @@
         " - Neuron is trained on examples\n",
         " - Supervised learning – the proper answers are known for the training set\n",
         "\n",
-        "<img src='https://raw.githubusercontent.com/marcinwolter/Machine-learning-KISD-2022/main/images/lecture5/training-a-single-neuron-0.png' width=450px>\n",
-        "\n",
-        "*ADALINE (Adaptive Linear Network)*\n",
-        "\n",
+        "<img src='https://raw.githubusercontent.com/marcinwolter/Machine-learning-KISD-2022/main/images/lecture5/training-a-single-neuron-0.png' width=350px>\n",
         "<br>\n",
         "\n",
         "\n",
@@ -296,10 +275,10 @@
         "   - $Z$ -the true output value (supervised training!)\n",
         "\n",
         "###**TASK – minimize the loss function:**\n",
-        " $ \\chi^2 = \\sum (y^{(i)}-Z^{(i)})^2$\n",
-        "   - Calculate the difference between the true end reconstructed outbut:<br>\n",
-        "   $ \\delta = Z - y$\n",
-        "   - Find a new set of weights:<br>\n",
+        "   - for example the loss function: $ \\chi^2 = \\sum (y^{(i)}-Z^{(i)})^2$,\n",
+        "   - calculate the difference between the true end reconstructed output:<br>\n",
+        "   $ \\delta = Z - y$,\n",
+        "   - find a new set of weights:<br>\n",
         "   $ W^{'} = W - \\eta \\cdot \\delta \\cdot X $<br>\n",
         "   where $\\eta$ is a learning speed\n",
         "\n",
@@ -318,24 +297,6 @@
     {
       "cell_type": "markdown",
       "source": [
-        "#<font color='green'>**Speed of learning**\n",
-        "\n",
-        "\n",
-        "<img src='https://raw.githubusercontent.com/marcinwolter/Machine-learning-KISD-2022/main/images/lecture5/speed-of-learning-0.gif'>\n",
-        "\n",
-        "**To small**\n",
-        "\n",
-        "<img src='https://raw.githubusercontent.com/marcinwolter/Machine-learning-KISD-2022/main/images/lecture5/speed-of-learning-1.gif'>\n",
-        "\n",
-        "**To big**\n"
-      ],
-      "metadata": {
-        "id": "1MXfTQ-xQadQ"
-      }
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
         "## **What can a single neuron (perceptron) do?**\n",
         "\n",
         "Perceptron (with a step activation function) can divide a plane by a straight line (in general: division by a hyperplane in the n-dimensional space).\n",
@@ -347,7 +308,7 @@
         "\n",
         "<img src='https://raw.githubusercontent.com/marcinwolter/Machine-learning-KISD-2022/main/images/lecture5/Screenshot from 2022-03-20 22-42-20.png' width=250 px>\n",
         "\n",
-        "\n",
+        "<!---\n",
         "## **What the perceptron can not do?**\n",
         "A single perceptron can’t separate the linearly not separable classes, for example the XOR function.The discovery of these limitations (1969) stopped the development of Neural Networks for some time.\n",
         "\n",
@@ -355,14 +316,14 @@
         "Screenshot from 2022-03-20 22-43-24.png' width=250 px>\n",
         "<img src='https://raw.githubusercontent.com/marcinwolter/Machine-learning-KISD-2022/main/images/lecture5/Screenshot from 2022-03-20 22-44-15.png' width=250 px>\n",
         "<img src='https://raw.githubusercontent.com/marcinwolter/Machine-learning-KISD-2022/main/images/lecture5/Screenshot from 2022-03-20 22-43-00.png' width=250 px>\n",
-        "\n",
+        "-->\n",
         "\n",
         "\n",
         "## **So, maybe a network of perceptrons?**\n",
         "\n",
         "   - Feed forward network – the information propagates from input to output.\n",
         "   - The net is the sum of many activation functions (in general it is non-linear)\n",
-        "   - A network, which is enough complicated can reproduce any function. \n",
+        "   - A network, which is enough complicated can reproduce <font color = 'red'>**any function**. \n",
         "\n",
         "<img src='https://raw.githubusercontent.com/marcinwolter/Machine-learning-KISD-2022/main/images/lecture5/\n",
         "Screenshot from 2022-03-20 22-54-29.png' width=350 px>\n"
@@ -374,45 +335,19 @@
     {
       "cell_type": "markdown",
       "source": [
-        "#**What a network can do? <br> (step activation function)**\n",
-        "\n",
-        "<img src='https://raw.githubusercontent.com/marcinwolter/Machine-learning-KISD-2022/main/images/lecture5/Screenshot from 2022-03-20 22-57-56.png' width=550 px>\n"
-      ],
-      "metadata": {
-        "id": "uZ7K9cZjWAM3"
-      }
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
         "#<font color='green'>**How to train a multilayer network?**\n",
         "\n",
-        "* Minimize the loss function by choosing a set of weights $\\omega$:\n",
-        "$$ R(\\omega) =\\frac{1}{N}\\sum_i(Z_i - net(X_i,\\omega_i))^2 $$\n",
-        "where $Z_i$ is true target value, $X_i$ is an input.\n",
+        "* Minimize the loss function by choosing a proper set of weights.\n",
         "\n",
         "* Problem – how to correct the weights in the deeper layer, while\n",
         "comparing only outputs on the last layer?\n",
-        "* This problem stopped the development of Neural Networks for 30\n",
-        "years, until 80-ties.\n",
+        "* This problem stopped the development of Neural Networks **for 30\n",
+        "years**, until 80-ties.\n",
         "* **Solution - the backpropagation** method. Errors $\\delta = Z_i - net(X_i,\\omega_i)$ are\n",
         "propagated backward through the net using the actual weights.\n",
         "\n",
         "\n",
-        "#**Typical training procedure**\n",
-        "\n",
-        "- Two data samples: for training and for tests.\n",
-        "- $\\chi^2 = \\sum_i (Z_i - net(X_i,\\omega_i))^2 $\n",
-        " is calculated for both training and test samples and compared to avoid \n",
-        " overtraining. \n",
-        "- Backpropagation:\n",
-        "  \n",
-        "  difference between the expected and calculated value of output\n",
-        "$\\delta = Z_i - net(X_i,\\omega_i)$\n",
-        "  is propagated backward through the net using the actual weights: \n",
-        "  $ W^{'} = W - \\eta \\cdot \\delta \\cdot X $<br>\n",
-        "\n",
-        "<img src='https://raw.githubusercontent.com/marcinwolter/Machine-learning-KISD-2022/main/images/lecture5/typical-training-procedure-1.png' width=450px>\n"
+        "\n"
       ],
       "metadata": {
         "id": "Hl3ESgDUhMAh"
@@ -421,23 +356,64 @@
     {
       "cell_type": "markdown",
       "source": [
+        "---\n",
+        "\n",
+        "\n",
+        "#<font color='green'>**Typical training procedure**\n",
+        "\n",
+        "\n",
+        "<img src='https://raw.githubusercontent.com/marcinwolter/Machine-learning-KISD-2022/main/images/lecture5/typical-training-procedure-1.png' width=450px>\n",
+        "\n",
+        "- **Two data samples: for training and for tests**.\n",
+        "- $\\chi^2 = \\sum_i (Z_i - net(X_i,\\omega_i))^2 $\n",
+        " is calculated for both training and test samples and compared to avoid \n",
+        " **overfitting**. \n",
+        "- Backpropagation:\n",
+        "  \n",
+        "  difference between the expected and calculated value of output\n",
+        "$\\delta = Z_i - net(X_i,\\omega_i)$\n",
+        "  is propagated backward through the net using the actual weights.\n",
+        "  <br>\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "bwpGCcq0G7PF"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "#<font color='green'> **Overfitting**\n",
+        "<center>\n",
+        "<img src='https://raw.githubusercontent.com/marcinwolter/AI_Lublin_2023/main/images/overfitting.png' width=550px>\n",
+        "\n",
+        "**We need a test sample (not used for training) to compare the values of the loss function.**\n",
+        "</center>"
+      ],
+      "metadata": {
+        "id": "WjPSXOTZWMZr"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
         "#<font color='green'>**Finding the minimum**\n",
         "\n",
-        "   - We never know, whether the global or a local minimum of the loss function is reached.\n",
-        "   - Mechanisms preventing  stopping in a local minimum:\n",
-        "     - Using random initial weights, repetition of training,\n",
-        "     - Addition of noise, so the minimizing algorithm can jump out of a local minimum (jittering).\n",
-        "   - Regularization - both MLPRegressor and MLPClassifier use parameter alpha for regularization (L2 regularization) term which helps in avoiding overfitting by penalizing weights with large magnitudes.\n",
+        "* **Minimalization algorithms:**\n",
         "\n",
-        "\n",
-        "## **Minimization algorithms in sklearn**\n",
-        "\n",
-        "- Stochastic Gradient Descent (SGD) - updates parameters using the gradient of the loss function with respect to a parameter that needs adaptation:\n",
+        "  - Stochastic Gradient Descent (SGD) - updates parameters using the gradient of the loss function with respect to a parameter that needs adaptation:\n",
+        "  - Adam - similar to SGD, but it can automatically adjust the amount to update parameters based on adaptive estimates (very popular).\n",
         "\n",
         "<img src='https://raw.githubusercontent.com/marcinwolter/Machine-learning-KISD-2022/main/images/lecture5/Non-convex-optimization-We-utilize-stochastic-gradient-descent-to-find-a-local-optimum.png' width=350px>\n",
         "\n",
-        "- Adam - similar to SGD, but it can automatically adjust the amount to update parameters based on adaptive estimates of lower-order moments.\n",
-        "- L-BFGS - approximates the Hessian matrix which represents the second-order partial derivative of a function. Further it approximates the inverse of the Hessian matrix to perform parameter updates.\n",
+        "\n",
+        "\n",
+        "   - We never know, whether the global or a local minimum of the loss function is reached.\n",
+        "   - Some tricks preventing  stopping in a local minimum:\n",
+        "     - Using random initial weights, repetition of training,\n",
+        "     - Addition of noise, so the minimizing algorithm can jump out of a local minimum (jittering).\n",
+        "\n",
+        "\n",
         "\n"
       ],
       "metadata": {
