Utworzono za pomocą Colaboratory

--- a/AI_Lublin_2023.ipynb
+++ b/AI_Lublin_2023.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyO62VLQ8nPHEkJVsMbXkwYb",
+      "authorship_tag": "ABX9TyMAJHLXG7RtalifIL8butXl",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1851,7 +1851,36 @@
     },
     {
       "cell_type": "markdown",
-      "source": [],
+      "source": [
+        "\n",
+        "\n",
+        "---\n",
+        "\n",
+        "\n",
+        "\n",
+        "---\n",
+        "\n",
+        "\n",
+        "\n",
+        "---\n",
+        "\n",
+        "\n",
+        "\n",
+        "# <font color='green'>**Generative Adversarial Networks GAN**\n",
+        "### <font color='green'>**Let's try to generate something new**\n",
+        "\n",
+        "\n",
+        "---\n",
+        "\n",
+        "\n",
+        "\n",
+        "---\n",
+        "\n",
+        "\n",
+        "\n",
+        "---\n",
+        "\n"
+      ],
       "metadata": {
         "id": "v8CKkbJlkPvy"
       }
