Utworzono za pomocą Colaboratory

--- a/examples/nlp/ipynb/neural_machine_translation_with_keras_nlp.ipynb
+++ b/examples/nlp/ipynb/neural_machine_translation_with_keras_nlp.ipynb
@@ -64,11 +64,11 @@
       "cell_type": "code",
       "execution_count": 1,
       "metadata": {
-        "id": "Of0Lu3Lwiq_L",
-        "outputId": "4bf6168c-db3f-4100-decd-818533f950e4",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "Of0Lu3Lwiq_L",
+        "outputId": "1a904dc2-46ea-4eb6-a6fb-f7a7180bad54"
       },
       "outputs": [
         {
@@ -79,9 +79,10 @@
               " '  Getting requirements to build wheel ... \\x1b[?25l\\x1b[?25hdone',\n",
               " '  Preparing metadata (pyproject.toml) ... \\x1b[?25l\\x1b[?25hdone',\n",
               " '\\x1b[?25l     \\x1b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\\x1b[0m \\x1b[32m0.0/6.0 MB\\x1b[0m \\x1b[31m?\\x1b[0m eta \\x1b[36m-:--:--\\x1b[0m',\n",
-              " '\\x1b[2K     \\x1b[91m━━━━━━━━━\\x1b[0m\\x1b[91m╸\\x1b[0m\\x1b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\\x1b[0m \\x1b[32m1.5/6.0 MB\\x1b[0m \\x1b[31m45.0 MB/s\\x1b[0m eta \\x1b[36m0:00:01\\x1b[0m',\n",
-              " '\\x1b[2K     \\x1b[91m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\\x1b[0m\\x1b[91m╸\\x1b[0m \\x1b[32m6.0/6.0 MB\\x1b[0m \\x1b[31m97.9 MB/s\\x1b[0m eta \\x1b[36m0:00:01\\x1b[0m',\n",
-              " '\\x1b[2K     \\x1b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\\x1b[0m \\x1b[32m6.0/6.0 MB\\x1b[0m \\x1b[31m57.8 MB/s\\x1b[0m eta \\x1b[36m0:00:00\\x1b[0m',\n",
+              " '\\x1b[2K     \\x1b[91m━━\\x1b[0m\\x1b[90m╺\\x1b[0m\\x1b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\\x1b[0m \\x1b[32m0.3/6.0 MB\\x1b[0m \\x1b[31m9.4 MB/s\\x1b[0m eta \\x1b[36m0:00:01\\x1b[0m',\n",
+              " '\\x1b[2K     \\x1b[91m━━━━━━━━━━━━━━━━\\x1b[0m\\x1b[91m╸\\x1b[0m\\x1b[90m━━━━━━━━━━━━━━━━━━━━━━━\\x1b[0m \\x1b[32m2.5/6.0 MB\\x1b[0m \\x1b[31m37.4 MB/s\\x1b[0m eta \\x1b[36m0:00:01\\x1b[0m',\n",
+              " '\\x1b[2K     \\x1b[91m━━━━━━━━━━━━━━━━━━━━━━━━━━━\\x1b[0m\\x1b[91m╸\\x1b[0m\\x1b[90m━━━━━━━━━━━━\\x1b[0m \\x1b[32m4.2/6.0 MB\\x1b[0m \\x1b[31m50.3 MB/s\\x1b[0m eta \\x1b[36m0:00:01\\x1b[0m',\n",
+              " '\\x1b[2K     \\x1b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\\x1b[0m \\x1b[32m6.0/6.0 MB\\x1b[0m \\x1b[31m43.6 MB/s\\x1b[0m eta \\x1b[36m0:00:00\\x1b[0m',\n",
               " '\\x1b[?25h  Building wheel for keras-nlp (pyproject.toml) ... \\x1b[?25l\\x1b[?25hdone']"
             ]
           },
@@ -157,28 +158,28 @@
       "cell_type": "code",
       "execution_count": 4,
       "metadata": {
-        "id": "hYbRzNUUiq_O",
-        "outputId": "246e9338-90f4-4b46-9a62-ec1c6132ee0d",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 313
-        }
+        },
+        "id": "hYbRzNUUiq_O",
+        "outputId": "67f34482-eb3f-49ec-91da-7b8d5df76ea0"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "--2023-06-08 01:26:31--  https://www.manythings.org/anki/pol-eng.zip\n",
+            "--2023-06-08 01:37:30--  https://www.manythings.org/anki/pol-eng.zip\n",
             "Resolving www.manythings.org (www.manythings.org)... 173.254.30.110\n",
             "Connecting to www.manythings.org (www.manythings.org)|173.254.30.110|:443... connected.\n",
             "HTTP request sent, awaiting response... 200 OK\n",
             "Length: 1868937 (1.8M) [application/zip]\n",
             "Saving to: ‘pol-eng.zip’\n",
             "\n",
-            "pol-eng.zip         100%[===================>]   1.78M  6.70MB/s    in 0.3s    \n",
+            "pol-eng.zip         100%[===================>]   1.78M  11.3MB/s    in 0.2s    \n",
             "\n",
-            "2023-06-08 01:26:32 (6.70 MB/s) - ‘pol-eng.zip’ saved [1868937/1868937]\n",
+            "2023-06-08 01:37:31 (11.3 MB/s) - ‘pol-eng.zip’ saved [1868937/1868937]\n",
             "\n",
             "Archive:  pol-eng.zip\n",
             "  inflating: pol.txt                 \n",
@@ -229,7 +230,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": 5,
       "metadata": {
         "id": "p5soZgwaiq_O"
       },
@@ -256,24 +257,24 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": 6,
       "metadata": {
-        "id": "-yM9utCaiq_P",
-        "outputId": "cf9c186b-896d-4ce7-8676-6329f6a6d422",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "-yM9utCaiq_P",
+        "outputId": "1ef7ce5b-fc8e-4108-8c72-f54eabf80ab9"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "('never talk to strangers.', 'nigdy nie rozmawiaj z obcymi.')\n",
-            "(\"i wouldn't think of it.\", 'nie pomyślałbym o tym.')\n",
-            "(\"tom isn't as idealistic as mary.\", 'tom nie jest takim idealistą jak mary.')\n",
-            "(\"i'll call.\", 'zadzwonię.')\n",
-            "('tom was born on an airplane.', 'tom urodził się w samolocie.')\n"
+            "('this book is yours.', 'ta książka jest twoja.')\n",
+            "('tom is angry with mary.', 'tom jest wściekły na mary.')\n",
+            "(\"it's time to talk.\", 'czas porozmawiać.')\n",
+            "('i tried to get tom to tell me.', 'próbowałem przekonać toma, żeby mi powiedział.')\n",
+            "('my heart hurts.', 'serce mnie boli.')\n"
           ]
         }
       ],
@@ -294,13 +295,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": 7,
       "metadata": {
-        "id": "7N1saSFdiq_P",
-        "outputId": "f9d371f3-12db-44b1-cc4c-fbeb834cef59",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "7N1saSFdiq_P",
+        "outputId": "cec6606d-5fbf-4970-b527-6f511c168531"
       },
       "outputs": [
         {
@@ -354,7 +355,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 10,
+      "execution_count": 8,
       "metadata": {
         "id": "fR2nB1WUiq_Q"
       },
@@ -388,7 +389,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 11,
+      "execution_count": 9,
       "metadata": {
         "id": "xMzZr0fyiq_Q"
       },
@@ -414,21 +415,21 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 12,
+      "execution_count": 10,
       "metadata": {
-        "id": "tD82wOfPiq_R",
-        "outputId": "ce0c0783-6456-48f6-d756-58551cef818a",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "tD82wOfPiq_R",
+        "outputId": "663fc796-4b45-40ad-c7c6-4c79e5be86a2"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "English Tokens:  ['here', 'has', 'will', 'all', '##ing', '##ed', 'going', 'him', 'time', 'as']\n",
-            "Polish Tokens:  ['są', 'mogę', '##y', 'tym', 'zrobić', 'tak', '##j', 'ten', '##sz', 'już']\n"
+            "English Tokens:  ['they', 'think', 'here', 'has', 'will', 'all', '##ing', 'time', '##ed', 'him']\n",
+            "Polish Tokens:  ['mogę', 'tym', 'tak', '##y', '##j', 'ten', 'zrobić', 'już', '##sz', 'cię']\n"
           ]
         }
       ],
@@ -449,7 +450,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 13,
+      "execution_count": 11,
       "metadata": {
         "id": "kqTbldnLiq_R"
       },
@@ -476,26 +477,26 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 15,
+      "execution_count": 12,
       "metadata": {
-        "id": "aNwC8HWpiq_R",
-        "outputId": "e91b434b-e259-4c47-d77d-9beb0e63f4bf",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "aNwC8HWpiq_R",
+        "outputId": "ed343716-56ad-4320-ab22-9a2b6f23a2cb"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "English sentence:  we helped them.\n",
-            "Tokens:  tf.Tensor([ 63 638 261  12], shape=(4,), dtype=int32)\n",
-            "Recovered text after detokenizing:  tf.Tensor(b'we helped them .', shape=(), dtype=string)\n",
+            "English sentence:  you think too much.\n",
+            "Tokens:  tf.Tensor([ 55 101 152 156  12], shape=(5,), dtype=int32)\n",
+            "Recovered text after detokenizing:  tf.Tensor(b'you think too much .', shape=(), dtype=string)\n",
             "\n",
-            "Polish sentence:  pomogliśmy im.\n",
-            "Tokens:  tf.Tensor([  94 1760  632  232  645   14], shape=(6,), dtype=int32)\n",
-            "Recovered text after detokenizing:  tf.Tensor(b'pomogli\\xc5\\x9bmy im .', shape=(), dtype=string)\n"
+            "Polish sentence:  za dużo myślisz.\n",
+            "Tokens:  tf.Tensor([ 94 178 291  14], shape=(4,), dtype=int32)\n",
+            "Recovered text after detokenizing:  tf.Tensor(b'za du\\xc5\\xbco my\\xc5\\x9blisz .', shape=(), dtype=string)\n"
           ]
         }
       ],
@@ -551,7 +552,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 16,
+      "execution_count": 13,
       "metadata": {
         "id": "PDc22ypuiq_S"
       },
@@ -615,13 +616,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 17,
+      "execution_count": 14,
       "metadata": {
-        "id": "fS9-G3nDiq_S",
-        "outputId": "22892dad-3375-4c4d-921f-efb5a2d50fea",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "fS9-G3nDiq_S",
+        "outputId": "acabe0c8-32db-4031-b719-3b1784756f1d"
       },
       "outputs": [
         {
@@ -679,7 +680,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 18,
+      "execution_count": 15,
       "metadata": {
         "id": "R7dGcMrBiq_S"
       },
@@ -753,13 +754,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 16,
       "metadata": {
-        "id": "82d7_g1Biq_T",
-        "outputId": "592d7e8f-2893-4aac-bb5e-95364b31b533",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "82d7_g1Biq_T",
+        "outputId": "b0240511-c07a-495b-f9cd-d4b843c0cfb5"
       },
       "outputs": [
         {
@@ -788,8 +789,18 @@
             "Trainable params: 14,449,304\n",
             "Non-trainable params: 0\n",
             "__________________________________________________________________________________________________\n",
-            " 18/516 [>.............................] - ETA: 27:21 - loss: 7.4433 - accuracy: 0.1355"
+            "516/516 [==============================] - 73s 114ms/step - loss: 4.7493 - accuracy: 0.3252 - val_loss: 4.0879 - val_accuracy: 0.3741\n"
           ]
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "<keras.callbacks.History at 0x7f4cc8165ab0>"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 16
         }
       ],
       "source": [
@@ -821,11 +832,30 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 17,
       "metadata": {
-        "id": "f264p_Jtiq_T"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "f264p_Jtiq_T",
+        "outputId": "e9aa5586-1eb8-438a-b438-14d080f5c7ac"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "** Example 0 **\n",
+            "i don't need anybody.\n",
+            "nie jestem w tym .\n",
+            "\n",
+            "** Example 1 **\n",
+            "you can't leave.\n",
+            "nie możesz się .\n",
+            "\n"
+          ]
+        }
+      ],
       "source": [
         "\n",
         "def decode_sequences(input_sentences):\n",
@@ -897,11 +927,24 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 18,
       "metadata": {
-        "id": "JS6IenYliq_T"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "JS6IenYliq_T",
+        "outputId": "55e017be-e4db-4ef6-cdae-b4cd25ffe0d3"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "ROUGE-1 Score:  {'precision': <tf.Tensor: shape=(), dtype=float32, numpy=0.24415347>, 'recall': <tf.Tensor: shape=(), dtype=float32, numpy=0.17333333>, 'f1_score': <tf.Tensor: shape=(), dtype=float32, numpy=0.19879363>}\n",
+            "ROUGE-2 Score:  {'precision': <tf.Tensor: shape=(), dtype=float32, numpy=0.03888889>, 'recall': <tf.Tensor: shape=(), dtype=float32, numpy=0.03277778>, 'f1_score': <tf.Tensor: shape=(), dtype=float32, numpy=0.035449736>}\n"
+          ]
+        }
+      ],
       "source": [
         "rouge_1 = keras_nlp.metrics.RougeN(order=1)\n",
         "rouge_2 = keras_nlp.metrics.RougeN(order=2)\n",
@@ -943,6 +986,7 @@
     }
   ],
   "metadata": {
+    "accelerator": "GPU",
     "colab": {
       "name": "neural_machine_translation_with_keras_nlp",
       "provenance": [],
