Utworzono za pomocą Colaboratory

--- a/neural_machine_translation_with_keras_nlp.ipynb
+++ b/neural_machine_translation_with_keras_nlp.ipynb
@@ -24,6 +24,24 @@
     },
     {
       "cell_type": "markdown",
+      "source": [
+        "##How to design and train an English to Polish translator?\n",
+        "\n",
+        "To design and train an English to Polish translator using transformers and keras-nlp, you can follow the steps below:\n",
+        "\n",
+        "* Prepare the data: Collect a large dataset of English-Polish translations. Divide it into training and validation sets.\n",
+        "* Tokenize the data: Use the Tokenizer API from keras-nlp to convert the text data into numerical data that can be used as input to the neural network.\n",
+        "* Design the model: Use the Transformer model architecture to design the translation model. You can use the TransformerEncoder and TransformerDecoder classes from keras-nlp to build the model.\n",
+        "* Train the model: Use the fit() method from keras to train the model. Use the Adam optimizer and categorical cross-entropy loss function.\n",
+        "* Evaluate the model: Use the evaluate() method to test the performance of the model on the validation set.\n",
+        "* Use the model for translation: Once the model is trained and evaluated, you can use it for English to Polish translation."
+      ],
+      "metadata": {
+        "id": "DTrZYFaLvwOf"
+      }
+    },
+    {
+      "cell_type": "markdown",
       "metadata": {
         "id": "FXXASulrkjZ1"
       },
