Utworzono za pomocą Colaboratory

--- a/AI_Lublin_2023.ipynb
+++ b/AI_Lublin_2023.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "gpuType": "T4",
-      "authorship_tag": "ABX9TyPf5Dk2kJ9JmlbZjJlQkLUL",
+      "authorship_tag": "ABX9TyMdTN/CtKsit5A9QN1/XAoY",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -39,10 +39,8 @@
         "\n",
         "\n",
         "\n",
-        "#**<font color = \"red\">Artificial\n",
-        "Intelligence (AI)\n",
-        "with code</font>**\n",
-        "#**<font color = \"red\">Is it a magic? Building blocks of AI</font>**\n",
+        "#**<font color = \"red\">Artificial Intelligence with code</font>**\n",
+        "#**<font color = \"red\"> Building blocks of AI</font>**\n",
         "\n",
         "**Hands-on workshop, Lublin**\n",
         "\n",
